--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,10 @@ spring.servlet.multipart.max-request-size=1MB
 server.servlet.session.tracking-modes=cookie
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.jackson.serialization.indent-output=true
+
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui-custom.html
+springdoc.swagger-ui.operationsSorter=method
+
 image.folder=D:\\5200_Ind_Proj\\simple-image-processor\\images\\
 image.size=400
