--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@
       		<artifactId>springdoc-openapi-ui</artifactId>
       		<version>1.6.6</version>
    		</dependency>
+		<dependency>
+    		<groupId>commons-fileupload</groupId>
+    		<artifactId>commons-fileupload</artifactId>
+    		<version>1.4</version>
+		</dependency>
+
 	</dependencies>
 	<repositories>
    		<repository>
