--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,10 @@ server.servlet.session.tracking-modes=cookie
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.jackson.serialization.indent-output=true
 
-springdoc.api-docs.path=/api-docs
+springdoc.api-docs.path=/simple-image-processor
 springdoc.swagger-ui.path=/swagger-ui-custom.html
 springdoc.swagger-ui.operationsSorter=method
+spring.servlet.multipart.enabled=false
 
 image.folder=D:\\5200_Ind_Proj\\simple-image-processor\\images\\
 image.size=400
