--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.servlet.multipart.max-file-size=1MB
-spring.servlet.multipart.max-request-size=1MB
+#spring.servlet.multipart.max-file-size=1MB
+#spring.servlet.multipart.max-request-size=1MB
 server.servlet.session.tracking-modes=cookie
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.jackson.serialization.indent-output=true
@@ -10,4 +10,4 @@ springdoc.swagger-ui.operationsSorter=method
 spring.servlet.multipart.enabled=false
 
 image.folder=D:\\5200_Ind_Proj\\simple-image-processor\\images\\
-image.size=400
+#image.size=400
