Adding restrictions for filesize and dimensions

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,6 @@ springdoc.swagger-ui.operationsSorter=method
 spring.servlet.multipart.enabled=false
 
 image.folder=D:\\5200_Ind_Proj\\simple-image-processor\\images\\
-#image.size=400
+image.size=10485760
+image.height=5000
+image.width=5000
