Added support for png and gif image formats

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,4 @@ image.folder=D:\\5200_Ind_Proj\\simple-image-processor\\images\\
 image.size=10485760
 image.height=5000
 image.width=5000
+image.max_resize=250
