Code cleanup/Refactoring

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,22 @@
-#spring.servlet.multipart.max-file-size=1MB
-#spring.servlet.multipart.max-request-size=1MB
+#Servlet Configurations
 server.servlet.session.tracking-modes=cookie
+spring.servlet.multipart.enabled=false
+
+#Jackson JSON formatter
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.jackson.serialization.indent-output=true
 
+#Swagger Configurations
 springdoc.api-docs.path=/simple-image-processor
 springdoc.swagger-ui.path=/swagger-ui-custom.html
 springdoc.swagger-ui.operationsSorter=method
-spring.servlet.multipart.enabled=false
 
-image.folder=D:\\5200_Ind_Proj\\simple-image-processor\\images\\
+#Configurable Parameters
 image.size=10485760
 image.height=5000
 image.width=5000
 image.max_resize=250
+
+#spring.servlet.multipart.max-file-size=1MB
+#spring.servlet.multipart.max-request-size=1MB
+image.folder=D:\\5200_Ind_Proj\\simple-image-processor\\images\\
