--- a/pom.xml
+++ b/pom.xml
@@ -46,22 +46,22 @@
 			<dependency>
     		<groupId>javax.xml.bind</groupId>
     		<artifactId>jaxb-api</artifactId>
-    		<version>2.3.1</version>
+    		<version>2.3.1</version><!--$NO-MVN-MAN-VER$-->
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
     		<artifactId>jackson-core</artifactId>
-    		<version>2.13.1</version>
+    		<version>2.13.1</version><!--$NO-MVN-MAN-VER$-->
 		</dependency>
 		<dependency>
     		<groupId>com.fasterxml.jackson.core</groupId>
     		<artifactId>jackson-annotations</artifactId>
-    		<version>2.13.1</version>
+    		<version>2.13.1</version><!--$NO-MVN-MAN-VER$-->
 		</dependency>
 		<dependency>
     		<groupId>com.fasterxml.jackson.core</groupId>
     		<artifactId>jackson-databind</artifactId>
-    		<version>2.13.1</version>
+    		<version>2.13.1</version><!--$NO-MVN-MAN-VER$-->
 		</dependency>
 		<dependency>
      		<groupId>javaxt</groupId>
