--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,13 +8,14 @@ spring.jackson.serialization.indent-output=true
 
 #Swagger Configurations
 springdoc.api-docs.path=/simple-image-processor
-springdoc.swagger-ui.path=/swagger-ui-custom.html
 springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.swagger-ui.path=/swagger-ui-custom.html
 
 #Configurable Parameters
-image.size=10485760
-image.height=5000
-image.width=5000
+image.size=5242880
+image.height=3000
+image.width=3000
 image.max_resize=250
 
 #spring.servlet.multipart.max-file-size=1MB
